--- a/kendynet/core/src/Makefile
+++ b/kendynet/core/src/Makefile
@@ -4,7 +4,7 @@ debug:
 	mv kendylib.a ../../../
 	rm -f *.o
 release:
-	gcc -O3 -g -c *.c -I../ -D _DEBUG -D _LINUX
+	gcc -O3 -g -c *.c -I../ -D _LINUX
 	ar -rc kendylib.a *.o
 	mv kendylib.a ../../../
 	rm -f *.o
