调整文件位置

--- a/deps/cproactor/Makefile
+++ b/deps/cproactor/Makefile
@@ -32,6 +32,7 @@ kendynet.a: \
 		   src/log.c\
 		   src/redisconn.c\
 		   src/tls.c\
+		   src/lua_util.c\
 		   src/kn_channel.c
 		$(CC) $(CFLAGS) -c $^ $(INCLUDE) $(DEFINE)
 		ar -rc kendynet.a *.o
