--- a/KendyNet/Makefile
+++ b/KendyNet/Makefile
@@ -11,7 +11,6 @@ kendynet.a: \
 		   ./src/kn_timer.c \
 		   ./src/kn_time.c \
 		   ./src/redisconn.c\
-		   ./src/kn_reg_file.c\
 		   ./src/kn_chr_dev.c\
 		   ./src/kn_socket.c
 		   $(CC) $(CFLAGS) -c $^ $(INCLUDE) $(DEFINE)
@@ -29,5 +28,5 @@ testtimer:kendynet.a testtimer.c
 	$(CC) $(CFLAGS) -o testtimer testtimer.c kendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl			
 teststat:kendynet.a teststat.c
 	$(CC) $(CFLAGS) -o teststat teststat.c kendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl
-testregfile:kendynet.a testregfile.c
-	$(CC) $(CFLAGS) -o testregfile testregfile.c kendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl				
+testchrdev:kendynet.a testchrdev.c
+	$(CC) $(CFLAGS) -o testchrdev testchrdev.c kendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl				
