添加二进制数据包的支持

--- a/old/Makefile
+++ b/old/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -g -Wall -fno-strict-aliasing -rdynamic
 LDFLAGS = -lpthread -lrt -llua5.2 -lm -ldl -ltcmalloc 
 SHARED = -fPIC -shared
 CC = gcc
-INCLUDE = -IKendyNet/include -I.. -I../deps
+INCLUDE = -IKendyNet/include -I.. -I../deps -I/usr/include/lua5.2
 DEFINE = -D_DEBUG -D_LINUX 
 
 kendynet.a: \
