--- a/deps/lua-cjson-2.1.0/Makefile
+++ b/deps/lua-cjson-2.1.0/Makefile
@@ -18,7 +18,7 @@ PREFIX =            /usr
 CFLAGS =            -O2 -Wall -pedantic -DNDEBUG
 CJSON_CFLAGS =      -fpic
 CJSON_LDFLAGS =     -shared
-LUA_INCLUDE_DIR =   $(PREFIX)/include/lua5.2
+LUA_INCLUDE_DIR =   ../lua-5.2.3/src
 LUA_CMODULE_DIR =   $(PREFIX)/lib/lua/$(LUA_VERSION)
 LUA_MODULE_DIR =    $(PREFIX)/share/lua/$(LUA_VERSION)
 LUA_BIN_DIR =       $(PREFIX)/bin
