调整示例程序目录

--- a/KendyNet/Makefile
+++ b/KendyNet/Makefile
@@ -5,6 +5,7 @@ CC = gcc
 DEPDIR = ../deps
 INCLUDE = -I./include -I./src -I./ -I$(DEPDIR) -I$(DEPDIR)/lua-5.2.3/src 
 DEFINE = -D_DEBUG -D_LINUX 
+SAMPLE = ./sample
 
 source =  src/kn_epoll.c \
 	   src/kn_timerfd.c \
@@ -40,48 +41,48 @@ libkendynet.a: $(source)
 	$(CC) $(SHARED) $(CFLAGS) -c $(source) $(INCLUDE) $(DEFINE)
 	ar -rc libkendynet.a *.o
 	
-broadcast_svr:broadcast_svr.c libkendynet.a
-	$(CC) $(CFLAGS) -o broadcast_svr broadcast_svr.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+broadcast_svr:$(SAMPLE)/broadcast_svr.c libkendynet.a
+	$(CC) $(CFLAGS) -o broadcast_svr $(SAMPLE)/broadcast_svr.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
 	
-broadcast_cli:broadcast_cli.c libkendynet.a
-	$(CC) $(CFLAGS) -o broadcast_cli broadcast_cli.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)		
+broadcast_cli:$(SAMPLE)/broadcast_cli.c libkendynet.a
+	$(CC) $(CFLAGS) -o broadcast_cli $(SAMPLE)/broadcast_cli.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)		
 
-tcpserver:tcpserver.c libkendynet.a
-	$(CC) $(CFLAGS) -o tcpserver tcpserver.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+tcpserver:$(SAMPLE)/tcpserver.c libkendynet.a
+	$(CC) $(CFLAGS) -o tcpserver $(SAMPLE)/tcpserver.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
 
-pingpong:pingpong.c libkendynet.a
-	$(CC) $(CFLAGS) -o pingpong pingpong.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
-testserver:testserver.c libkendynet.a
-	$(CC) $(CFLAGS) -o testserver testserver.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+pingpong:$(SAMPLE)/pingpong.c libkendynet.a
+	$(CC) $(CFLAGS) -o pingpong $(SAMPLE)/pingpong.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+testserver:$(SAMPLE)/testserver.c libkendynet.a
+	$(CC) $(CFLAGS) -o testserver $(SAMPLE)/testserver.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
 	
-testclient:testclient.c libkendynet.a
-	$(CC) $(CFLAGS) -o testclient testclient.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
-testredis:testredis.c libkendynet.a						
-	$(CC) $(CFLAGS) -o testredis testredis.c libkendynet.a ../../deps/hiredis/libhiredis.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
-testtimer:libkendynet.a testtimer.c
-	$(CC) $(CFLAGS) -o testtimer testtimer.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl							
-testmailbox:libkendynet.a testmailbox.c
-	$(CC) $(CFLAGS) -o testmailbox testmailbox.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl
-log:testlog.c libkendynet.a						
-	$(CC) $(CFLAGS) -o log testlog.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
-testlua:libkendynet.a testlua.c	
-	$(CC) $(CFLAGS) -o testlua testlua.c libkendynet.a  $(INCLUDE) $(LDFLAGS) -llua -ldl -lm $(DEFINE) -L $(DEPDIR)/lua-5.2.3/src
+testclient:$(SAMPLE)/testclient.c libkendynet.a
+	$(CC) $(CFLAGS) -o testclient $(SAMPLE)/testclient.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+testredis:$(SAMPLE)/testredis.c libkendynet.a						
+	$(CC) $(CFLAGS) -o testredis $(SAMPLE)/testredis.c libkendynet.a ../../deps/hiredis/libhiredis.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+testtimer:libkendynet.a $(SAMPLE)/testtimer.c
+	$(CC) $(CFLAGS) -o testtimer $(SAMPLE)/testtimer.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl							
+testmailbox:libkendynet.a $(SAMPLE)/testmailbox.c
+	$(CC) $(CFLAGS) -o testmailbox $(SAMPLE)/testmailbox.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl
+log:$(SAMPLE)/testlog.c libkendynet.a						
+	$(CC) $(CFLAGS) -o log $(SAMPLE)/testlog.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+testlua:libkendynet.a $(SAMPLE)/testlua.c	
+	$(CC) $(CFLAGS) -o testlua $(SAMPLE)/testlua.c libkendynet.a  $(INCLUDE) $(LDFLAGS) -llua -ldl -lm $(DEFINE) -L $(DEPDIR)/lua-5.2.3/src
 	
-testmsgque:libkendynet.a testmsgque.c
-	$(CC) $(CFLAGS) -o testmsgque testmsgque.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl
+testmsgque:libkendynet.a $(SAMPLE)/testmsgque.c
+	$(CC) $(CFLAGS) -o testmsgque $(SAMPLE)/testmsgque.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl
 	
-mysql_proxy:libkendynet.a mysql_proxy.c
-	$(CC) $(CFLAGS) -o mysql_proxy mysql_proxy.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl -lmysqlclient -I/usr/include/mysql	
+mysql_proxy:libkendynet.a $(SAMPLE)/mysql_proxy.c
+	$(CC) $(CFLAGS) -o mysql_proxy $(SAMPLE)/mysql_proxy.c libkendynet.a $(INCLUDE) $(LDFLAGS)	$(DEFINE) -rdynamic -ldl -lmysqlclient -I/usr/include/mysql	
 	
-daemonserver:daemonserver.c libkendynet.a
-	$(CC) $(CFLAGS) -o daemonserver daemonserver.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+daemonserver:$(SAMPLE)/daemonserver.c libkendynet.a
+	$(CC) $(CFLAGS) -o daemonserver $(SAMPLE)/daemonserver.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
 
-testhttp:testhttp.c libkendynet.a
-	$(CC) $(CFLAGS) -o testhttp testhttp.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
+testhttp:$(SAMPLE)/testhttp.c libkendynet.a
+	$(CC) $(CFLAGS) -o testhttp $(SAMPLE)/testhttp.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)
 	
-testcurl:testcurl.c libkendynet.a
-	$(CC) $(CFLAGS) -o testcurl testcurl.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE) -lcurl	
+testcurl:$(SAMPLE)/testcurl.c libkendynet.a
+	$(CC) $(CFLAGS) -o testcurl $(SAMPLE)/testcurl.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE) -lcurl	
 
-testlfstack:libkendynet.a testlfstack.c
-	$(CC) $(CFLAGS) -o testlfstack testlfstack.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)						
+testlfstack:libkendynet.a $(SAMPLE)/testlfstack.c
+	$(CC) $(CFLAGS) -o testlfstack $(SAMPLE)/testlfstack.c libkendynet.a $(INCLUDE) $(LDFLAGS) $(DEFINE)						
 					
